duck/test/fail/duplicate_pattern.duck
_ = case 1,2 of x,x -> 0
